WRP-2648 fix on alignment and removing icons from dashboard links

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -6,7 +6,7 @@
      float: left;
      display: inline;
      margin: 0;
-     padding: 14px 0 0 0;
+     padding: 13px 0 0 0;
      list-style: none;
  }
  ul.dashboard-link-list li {
@@ -43,10 +43,10 @@
  ul.dashboard-link-list li ul {
      padding: 0;
      position: absolute;
-     top: 42px;
+     top: 40px;
     left: -19px;
      width: 100px;
-     font-size: 12px;
+     font-size: 13px!important;
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
